<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICU</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="localCoordStatic">local position</string>
    <string name="notAvailable">not available\n</string>
    <string name="remotePosition">remote position</string>
    <string name="requestLocation">Request location</string>
    <string name="AuthorizedNumbers">Authorized Numbers</string>
    <string name="AddNumber">Add Number</string>
    <string name="PickNumber">Pick Number</string>
    
    <string name="PREFERENCES_AUT_NUMBERS">ICU_AUTHORIZED_NUMBERS</string>
    <string name="PREFERENCES">ICU_AUTHORIZED_NUMBERS</string>
    <string name="PREFERENCES_TARGET_NUMBER">ICU_REMOTE_NUMBER</string>
    <string name="LOCATION_REQUEST">LOCATION_REQUEST</string>
    <string name="LOCATION">LOCATION</string>
    <string name="buttonHide">Hide Me</string>
    <string name="displayOn">Display ON</string>

</resources>
