<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewLocalCoordStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localCoordStatic"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewLocalCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notAvailable"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonPickNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PickNumber" />

    <TextView
        android:id="@+id/textViewNumberStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewMonitorNumber"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonRequestCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestLocation" />

    <TextView
        android:id="@+id/textViewRemoteCoordStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remotePosition"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewRemoteCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notAvailable"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>